# namespace_test

./: .gitignore  README.md
lib_a/: README.md  pyproject.toml
lib_a/src/nstst/spa/: mod_a.py
lib_b/: README.md  pyproject.toml
lib_b/src/nstst/spb/: mod_b.py
lib_c/: README.md  pyproject.toml
lib_c/src/nstst/spc/: mod_c.py
