[tool.poetry]
name = "lib-b"
version = "0.1.0"
description = "Package 'b' with a shared namespace (ns)"
authors = ["Florian Kluibenschadl <fkluibenschaedl@rti.org>"]
readme = "README.md"

packages = [
    { include = "nstst", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
lib-a = {path = "../lib_a/dist/lib_a-0.1.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
